examples/BAD/BAD_053_CONTENT_BUILDING_1/main.nut

&[R123] {
    filePath = "./main.nut"
    isDirectory = true
}

&[R1235] ["this", "is", "a", "array"]
